--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,8 @@
-.places {
+.place {
     margin: 0 auto 92px;
 }
 @media screen and (max-width: 768px) {
-    .places {
+    .place {
         margin-bottom: 88px;
         padding: 0 24px;
     }
