--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     background-size: cover;
-    min-height: 740px;
+    min-height: 62.5vw;
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
@@ -25,9 +25,13 @@
 }
 .cover__link:hover::before {
     opacity: .8;
-
 }
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1184px) {
+    .cover__link {
+        min-height: 740px;
+    }
+}
+/*@media screen and (max-width: 1024px) {
     .cover__link {
         min-height: 640px;
     }
@@ -42,4 +46,4 @@
     .cover__link {
         min-height: 200px;
     }
-}
+}*/
