--- a/pages/index.css
+++ b/pages/index.css
@@ -26,15 +26,15 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid_item.css);
 
-@import url(../blocks/places/places.css);
-@import url(../blocks/places/__image/place__image.css);
-@import url(../blocks/places/__paragraph/place__paragraph.css);
-@import url(../blocks/places/__title/place__title.css);
-@import url(../blocks/places/__website/place__website.css);
-@import url(../blocks/places/__item/places__item.css);
-@import url(../blocks/places/__link/place__link.css);
-@import url(../blocks/places/__url-heading/place__url-heading.css);
-@import url(../blocks/places/__description/place__description.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__item/place__item.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__description/place__description.css);
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__title/cover__title.css);
