--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,6 +8,7 @@
     color: #FFFFFF;
     z-index: 1;
     max-width: 360px;
+    margin: 0;
 }
 @media screen and (max-width: 767px) {
     .cover__subtitle {
