--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,7 +9,7 @@
 
 
 @media screen and (max-width: 767px) {
-    .intro {
+    .intro__title {
         font-size: 32px;
         line-height: 35px;
     }
