--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,3 +7,14 @@
         padding: 0 24px;
     }
 }
+@media screen and (max-width: 1024px) {
+    .place {
+        padding: 0 48px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .place {
+        padding: 0;
+        margin-bottom: 64px;
+    }
+}
