--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -12,3 +12,8 @@
         margin-bottom: 88px;  
     }
 }
+@media screen and (max-width: 320px) {
+    .cover {
+        margin-bottom: 64px;  
+    }
+}
