--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,12 +2,17 @@
     display: flex;
     justify-content: space-between;
     padding: 0 48px;
-    margin: 24px;
+    margin-bottom: 24px;
     flex-direction: row;
 }
-
+@media screen and (max-width: 768px) {
+    .footer {
+        padding: 0 24px;
+    }
+}
 @media screen and (max-width: 767px) {
     .footer {
         flex-direction: column;
+        padding: 0 16px;
     }
 }
