--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -3,3 +3,10 @@
     width: 176px;
     height: 52px;
   }
+  @media screen and (max-width: 320px) {
+    .logo {
+      width: 142px;
+      height: 42px;
+      background-size: cover;
+    }
+}
