--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -8,11 +8,10 @@
     margin: 0;
 
 }
-
 .place__description + .place__description {
     margin: 26px 0 0;
 }
-@media screen and (max-width: 767px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .place__description {
         font-size: 16px;
     }
