--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,3 +1,8 @@
 .place__paragraph {
-    padding: 0 16px;
+    
   } 
+  @media screen and (max-width: 320px) {
+    .place__paragraph {
+      padding: 0 16px;
+    } 
+}
