--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,6 @@
 .intro {
     max-width: 984px;
-    margin: 0 0 92px;
-    padding-left: 48px;
+    margin: 0 auto 92px;
 }
 
 @media screen and (max-width: 768px) {
