--- a/blocks/place/__item/place__item.css
+++ b/blocks/place/__item/place__item.css
@@ -1,7 +1,7 @@
 .place__item {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(auto, 1fr);
+    grid-template-rows: 1fr;
     grid-template-areas: 
     "title website" 
     "image paragraph";
