--- a/pages/index.css
+++ b/pages/index.css
@@ -6,7 +6,7 @@
 @import url(../blocks/header/__lang-list/header__lang-list.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__link/);
-@import url(../blocks/header/__link/__active/header__link_active.css);
+@import url(../blocks/header/__link/_active/header__link_active.css);
 @import url(../blocks/header/header.css);
 
 @import url(../blocks/lead/__title/lead__title.css);
@@ -20,8 +20,8 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__list/__item/intro__item.css);
-@import url(../blocks/intro/__list/__item/_weight/intro__item_weight_bold.css);
+@import url(../blocks/intro/__item/intro__item.css
+@import url(../blocks/intro/__item/_weight/intro__item_weight_bold.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid_item.css);
