--- a/pages/index.css
+++ b/pages/index.css
@@ -20,7 +20,7 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__item/intro__item.css
+@import url(../blocks/intro/__item/intro__item.css);
 @import url(../blocks/intro/__item/_weight/intro__item_weight_bold.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
